# WeKnoRust

./: .env.example  CHANGELOG.md  Makefile  README.md  README_CN.md  README_JA.md  TODO.md  docker-compose.yml  go.mod
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: rust-ci.yml
client/: README.md  README_EN.md
cmd/server/: main.go
config/: config.yaml
docs/: API.md  API_EN.md  QA.md  QA_EN.md  Using_Another_Vector_DB_EN.md  使用其他向量数据库.md
frontend/: tsconfig.app.json
frontend/src/: main.ts
frontend/src/api/chat/: index.ts  streame.ts
frontend/src/api/initialization/: index.ts
frontend/src/api/knowledge-base/: index.ts
frontend/src/api/test-data/: index.ts
frontend/src/assets/theme/: theme.css
frontend/src/components/: Input-field.vue  empty-knowledge.vue  menu.vue  upload-mask.vue
frontend/src/hooks/: useKnowledgeBase.ts
frontend/src/router/: index.ts
frontend/src/stores/: menu.ts  settings.ts
frontend/src/utils/: index.ts  request.ts
frontend/src/views/chat/: index.vue
frontend/src/views/chat/components/: botmsg.vue  deepThink.vue  docInfo.vue  sendMsg.vue  usermsg.vue
frontend/src/views/creatChat/: creatChat.vue
frontend/src/views/initialization/: InitializationConfig.vue
frontend/src/views/knowledge/: KnowledgeBase.vue
frontend/src/views/settings/: Settings.vue
internal/application/repository/: chunk.go  knowledge.go  knowledgebase.go  message.go  model.go  session.go  tenant.go
internal/application/repository/retriever/elasticsearch/: structs.go
internal/application/repository/retriever/elasticsearch/v7/: repository.go
internal/application/repository/retriever/elasticsearch/v8/: repository.go
internal/application/repository/retriever/postgres/: repository.go  structs.go
internal/application/service/: chunk.go  dataset.go  evaluation.go  graph.go  knowledge.go  knowledgebase.go  message.go  metric_hook.go  model.go  session.go  tenant.go  test_data.go
internal/application/service/chat_pipline/: chat_completion.go  chat_completion_stream.go  chat_pipline.go  chat_pipline_test.go  common.go  filter_top_k.go  into_chat_message.go  merge.go  preprocess.go  rerank.go  rewrite.go  search.go  stream_filter.go  tracing.go
internal/application/service/file/: cos.go  dummy.go  local.go  minio.go
internal/application/service/metric/: bleu.go  common.go  map.go  map_test.go  mrr.go  mrr_test.go  ndcg.go  precision.go  precision_test.go  recall.go  recall_test.go  rouge.go
internal/application/service/retriever/: composite.go  keywords_vector_hybrid_indexer.go  registry.go
internal/common/: asyncq.go  tools.go
internal/config/: config.go
internal/container/: cleanup.go  container.go
internal/errors/: errors.go
internal/handler/: chunk.go  evaluation.go  initialization.go  knowledge.go  knowledgebase.go  message.go  model.go  session.go  tenant.go  test_data.go
internal/logger/: logger.go
internal/middleware/: auth.go  error_handler.go  logger.go  recovery.go  trace.go
internal/models/chat/: chat.go  ollama.go  remote_api.go  remote_api_test.go
internal/models/embedding/: batch.go  embedder.go  ollama.go  openai.go
internal/models/rerank/: remote_api.go  reranker.go
internal/models/utils/ollama/: ollama.go
internal/router/: router.go
internal/runtime/: container.go
internal/stream/: factory.go  memory_manager.go  redis_manager.go
internal/types/: chunk.go  embedding.go  search.go  session.go
internal/types/interfaces/: chunk.go  evaluation.go  knowledge.go  knowledgebase.go  message.go  model.go  resource.go  retriever.go  session.go  stream_manager.go  tenant.go
mcp-server/: CHANGELOG.md  EXAMPLES.md  INSTALL.md  PROJECT_SUMMARY.md  README.md  __init__.py  main.py  pyproject.toml  run.py  run_server.py  setup.py  test_imports.py  test_module.py  weknora_mcp_server.py  weknorust_mcp_server.py
rust/: Cargo.toml
rust/apps/api/: Cargo.toml
rust/apps/api/src/: main.rs
rust/crates/config/: Cargo.toml
rust/crates/config/src/: lib.rs
rust/crates/logger/: Cargo.toml
rust/crates/logger/src/: lib.rs
rust/crates/repos/: Cargo.toml
rust/crates/repos/src/: lib.rs  tenant.rs
rust/crates/stream/: Cargo.toml
rust/crates/stream/src/: lib.rs  memory.rs  redis_impl.rs
rust/crates/types/: Cargo.toml
rust/crates/types/src/: lib.rs
rust/crates/web/: Cargo.toml
rust/crates/web/src/: lib.rs
scripts/: build_images.sh  start_all.sh
services/docreader/src/client/: client.go  client_test.go
services/docreader/src/proto/: docreader.pb.go
