[package]
name = "wk_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
wk_logger = { path = "../../crates/logger" }
wk_config = { path = "../../crates/config" }
wk_web = { path = "../../crates/web" }
wk_repos = { path = "../../crates/repos" }
wk_stream = { path = "../../crates/stream" }
anyhow = "1"
