[package]
name = "wk_repos"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
thiserror = "1"
tracing = "0.1"
wk_types = { path = "../types" }
dotenvy = "0.15"
