[package]
name = "wk_stream"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
humantime = "2.1"
redis = { version = "0.24", features = ["aio", "tokio-comp"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
wk_config = { path = "../config" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
