[package]
name = "wk_web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
wk_logger = { path = "../logger" }
wk_config = { path = "../config" }
wk_types = { path = "../types" }
